Fixed wrapping issues.

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,3 +34,8 @@
 .me {
   background-color: #dde;
 }
+
+.nowrap {
+  overflow: visible;
+  white-space: normal;
+}
